1999-05-28  MORIOKA Tomohiko  <tomo@m17n.org>

	* README.en (Required environment): Require APEL 9.20.

1999-05-27  MORIOKA Tomohiko  <tomo@m17n.org>

	* mime-play.el (mime-play-entity): Enter to the calist-package
	`mime-view' before call `ctree-find-calist'.

	* mime-view.el (mime-view): New calist-package.
	(mime-display-entity): Enter to the calist-package `mime-view'
	before call `ctree-match-calist'.

1999-05-23  MORIOKA Tomohiko  <tomo@m17n.org>

	* mime-edit.el (mime-edit-mime-version-value): Don't use
	`eval-when-compile' to avoid problem with XEmacs-MULE.
	(mime-edit-mime-version-field-for-message/partial): Likewise.

1999-05-20  MORIOKA Tomohiko  <tomo@m17n.org>

	* NEWS (Text property `mime-view-entity-{header|body}'): New
	subsection.
	(Behavior change about `mime-display-header-hook'): Likewise.

	* mime-view.el (mime-display-entity): Don't move to (point-max)
	before run `mime-display-header-hook)'.

1999-05-19  MORIOKA Tomohiko  <tomo@m17n.org>

	* mime-view.el (mime-display-entity): Put text-property
	`mime-view-entity-header' and `mime-view-entity-body' to header
	and body; run `mime-display-header-hook' before insert "\n".
	(mime-preview-follow-current-entity): Use text-property
	`mime-view-entity-header'.


1999-05-12  Katsumi Yamaoka   <yamaoka@jpl.org>

	* WEMI: Version 1.13.4 (Nishi-Yaizu) released.

1999-04-06  Shuhei KOBAYASHI  <shuhei@aqua.ocn.ne.jp>

	* mime-edit.el (mime-delete-field): Use `std11-field-end'.

1999-03-30  Keiichi Suzuki  <kei-suzu@mail.wbs.ne.jp>

	* mime-edit.el (mime-edit-decode-single-part-in-buffer): Normalize
	EOL code in MIME encoded text part.

1999-03-27  MORIOKA Tomohiko  <morioka@jaist.ac.jp>

	* mime-view.el (mime-preview-follow-current-entity): Don't copy
	header if current entity is root.

1999-03-11  MORIOKA Tomohiko  <morioka@jaist.ac.jp>

	* mime-edit.el (mime-charset-type-list): Add `tis-620'.


1999-02-28  Katsumi Yamaoka   <yamaoka@jpl.org>

	* WEMI: Version 1.13.3 (Yaizu) released.
